[gd_scene load_steps=9 format=3 uid="uid://pty6hsw55yfu"]

[ext_resource type="Texture2D" uid="uid://cq2sutwvdqfhe" path="res://assets/textures/bg.png" id="1_7rhsc"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_p2bry"]
[ext_resource type="PackedScene" uid="uid://cpt0mnhx1blq2" path="res://scenes/player.tscn" id="2_lhdmo"]
[ext_resource type="PackedScene" uid="uid://lx5e446byeeg" path="res://scenes/hud.tscn" id="2_osoyd"]
[ext_resource type="PackedScene" uid="uid://b73k185h7a6g5" path="res://scenes/enemy_spawner.tscn" id="3_de6mc"]
[ext_resource type="AudioStream" uid="uid://chf5saw6qyipt" path="res://assets/audio/hit.wav" id="6_wr0ws"]
[ext_resource type="AudioStream" uid="uid://dx6xedlrru0hw" path="res://assets/audio/explode.wav" id="7_4ynp6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16e2h"]
size = Vector2(36.068, 689.951)

[node name="Game" type="Node2D"]
script = ExtResource("1_p2bry")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_osoyd")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1281.0
offset_bottom = 719.0
texture = ExtResource("1_7rhsc")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_lhdmo")]
position = Vector2(192, 331)

[node name="EnemySpawner" parent="." instance=ExtResource("3_de6mc")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-33, 161)
scale = Vector2(1.03, 1.03)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-17.4757, 190.291)
shape = SubResource("RectangleShape2D_16e2h")

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wr0ws")

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4ynp6")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
